@@ -1,6 +1,7 @@
 package com.dh.toururuguay.model;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -32,33 +33,19 @@ public class Usuario implements UserDetails {
     @Column(name = "last_name")
     private String lastname;
 
-    @ManyToOne(optional = false)
+    @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "role_id")
     @JsonProperty("rol")
     private Rol rol;
-<<<<<<< HEAD
-<<<<<<< .merge_file_a22844
-<<<<<<< .merge_file_a05976
-=======
-=======
->>>>>>> .merge_file_a17580
-=======
->>>>>>> 4187cebf0a0cb683cd83a99ab0335e38c9966ab4
-<<<<<<< HEAD
-    
-=======
 
->>>>>>> e4c6ec0b1d7ea3fe5ace8acd2f65e7671195bd85
-<<<<<<< HEAD
-<<<<<<< .merge_file_a22844
->>>>>>> .merge_file_a18272
-=======
->>>>>>> .merge_file_a17580
-=======
->>>>>>> 4187cebf0a0cb683cd83a99ab0335e38c9966ab4
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority((rol.getName())));
+        System.out.println("Usuario: " + username + ", Rol: " + rol);
+        if (rol == null) {
+            System.out.println("El rol es nulo.");
+            return Collections.emptyList(); // O retorna una colección vacía según tu lógica
+        }
+        return List.of(new SimpleGrantedAuthority(rol.getName()));
     }
 
     @Override
